--- a/package.json
+++ b/package.json
@@ -2,14 +2,15 @@
   "name": "browser-json-exporter",
   "version": "1.0.0",
   "description": "",
-  "main": "webpack.config.js",
+  "main": "./dist/browserjsonexporter.min.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
+  "author": "potproject",
   "license": "MIT",
   "dependencies": {
     "webpack": "^3.4.1",
+    "babel-core": "^6.26.0",
     "babel-loader": "^7.1.1",
     "babel-polyfill": "^6.23.0",
     "babel-preset-es2015": "^6.24.1"
